# light-minded

./: .gitignore  AUTHORS.md  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
atlases/mni/bna/: BN_218_combined_labels_networks.csv  BN_Atlas_246_1mm.md
config/: settings.json
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
hack/: add_network_column.py  add_network_nina_id.py  bn_246_table.md  brainetome_roi_labels_network_groupings.csv  data_format.json  fill_table.py
scripts/: main_caller.py  nii2stl.py  simulator.py  simulator2.py
src/api_server/: main.py
src/dataformat/: __init__.py
src/light_minded/: __init__.py  cli.py  config.py  launch.py  light_minded.py
src/light_minded/hack/test_outputs/: query_0_roi_data.json  query_1_roi_data.json  query_2_roi_data.json  results.json
tests/: __init__.py  test_light_minded.py
