[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "light_minded"
version = "0.1.0"
description = "Light-minded is an interactive art installation created uwith meta-analysis of neuroimaging datasets and lots of LEDs."
readme = "README.rst"
authors = [
  {name = "Amy Catherine Romanello", email = "arom2013@gmail.com"}
]
maintainers = [
  {name = "Amy Catherine Romanello", email = "arom2013@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/amyromanello/light_minded/issues"
changelog = "https://github.com/amyromanello/light_minded/blob/master/changelog.md"
homepage = "https://github.com/amyromanello/light_minded"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

