[project]
name = "light-minded"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alabaster==0.7.16",
    "babel==2.17.0",
    "backports-tarfile==1.2.0",
    "bump2version==1.0.1",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "cognitiveatlas==0.1.11",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "coverage==7.3.1",
    "cycler==0.12.1",
    "distlib==0.3.9",
    "docutils==0.21.2",
    "filelock==3.18.0",
    "fonttools==4.57.0",
    "fuzzywuzzy==0.18.0",
    "idna==3.10",
    "imagesize==1.4.1",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "keyring==25.6.0",
    "kiwisolver==1.4.8",
    "llvmlite==0.44.0",
    "lxml==5.3.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "mdurl==0.1.2",
    "more-itertools==10.6.0",
    "mpmath==1.3.0",
    "narwhals==1.35.0",
    "neuroquery>=1.0.4",
    "nh3==0.2.21",
    "nibabel==5.3.2",
    "nilearn==0.11.1",
    "nimare==0.4.2",
    "numba==0.61.2",
    "numpy==1.26.4",
    "packaging==25.0",
    "pandas==2.2.3",
    "patsy==1.0.1",
    "pillow==11.2.1",
    "pkginfo==1.12.1.2",
    "platformdirs==4.3.7",
    "plotly==6.0.1",
    "pluggy==1.5.0",
    "pygments==2.19.1",
    "pymare==0.0.8",
    "pyparsing==3.2.3",
    "pyproject-api==1.9.0",
    "pytest==7.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "readme-renderer==44.0",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==14.0.0",
    "ridgeplot==0.3.2",
    "ruff==0.4.5",
    "scikit-image>=0.25.2",
    "scikit-learn==1.6.1",
    "scipy==1.12.0",
    "six==1.17.0",
    "snowballstemmer==2.2.0",
    "sparse==0.16.0",
    "sphinx==7.3.0",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "statsmodels==0.14.4",
    "stl>=0.0.3",
    "sympy==1.13.3",
    "threadpoolctl==3.6.0",
    "tox==4.10.0",
    "tqdm==4.67.1",
    "twine==4.0.2",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "virtualenv==20.30.0",
    "watchdog==3.0.0",
    "wrapt==1.17.2",
    "zipp==3.21.0",
]

[dependency-groups]
dev = [
    "bump2version==1.0.1",
    "coverage==7.3.1",
    "pip==25.0.1",
    "pytest==7.3.2",
    "ruff==0.4.5",
    "sphinx==7.3.0",
    "tox==4.10.0",
    "twine==4.0.2",
    "watchdog==3.0.0",
    "wheel==0.40.0",
]
